revision 14:
- target toolchain update (binutils 2.17, gcc-4.1.1, uclibc-0.9.28.1)
revision 13:
- added libpcap
- added knock-package
- updatet 7141 to 40.04.30
revision 12:
- added cpmaccfg-package
revision 11:
- added shadow000's webinterface mod (orangebox)
revision 10:
- fixed calllist for labor-firmwares (foncalls.patch)
- update to busybox-1.4.1
- cpmac-ioctl.patch
- kernel-printk.patch
revision 8:
- update to busybox-1.4.0
- added some kernel-modules (ntfs, cifs, smbfs)
revision 5:
- fixed W701V-webmenu patch
revision 4:
- more W701V fixes
- added some iptable-modules
revision 3:
- updated openvpn-Package to 0.6b
- updated .version
- fixed W701V patch
- added avm-ftpd-remove patch
revision 2:
- fixed modules_install with parallel make
- added unionfs 
- added libreadline
revision 1:
- initial checkin